k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speakops-api-svc
  namespace: default
spec:
  selector:
    app: speakops-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: default
spec:
  selector:
    app: speakops-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
